--- a/config.yml
+++ b/config.yml
@@ -6,12 +6,11 @@ check_power_every: 10  # Seconds in between checks to get the battery/ac status
 default_gaming_plan: null   # Example: "Turbo"
 default_gaming_plan_games: null   # Example list: ["7zFM.exe", "notepad++.exe"]
 default_starting_plan: "Windows"
-default_ac_plan: "Performance"
+default_ac_plan: "Silent (low-speed fan)"
 default_dc_plan: "Silent (battery)"
 default_power_plan: "Balanced"
 alt_power_plan: "temp power plan"
 temp_dir: 'C:\temp\' # MUST END with "\"!!
-has_aniMatrix: true
 debug: false # true/false Don't change unless you know what you are doing!!!
 plans:
   - name: Silent (battery)
@@ -36,9 +35,8 @@ plans:
     gpu_curve: "30c:0%,40c:5%,50c:10%,60c:10%,70c:34%,80c:51%,90c:61%,100c:61%"
     cpu_tdp: 35000
     boost: 0
-    dgpu_enabled: false
+    dgpu_enabled: true
     screen_hz: 120
-    screen_hz: null
   - name: Performance
     plan: performance
     cpu_curve: null
