--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,7 @@ default_dc_plan: "Silent (battery)"
 default_power_plan: "Balanced"
 alt_power_plan: "temp power plan"
 temp_dir: 'C:\temp\' # MUST END with "\"!!
+use_animatrix: false
 debug: false # true/false Don't change unless you know what you are doing!!!
 plans:
   - name: Silent (battery)
