--- a/data/config.yml
+++ b/data/config.yml
@@ -3,9 +3,9 @@ app_name: "G14 Control"  # Name of the app, you can customize that as you wish!
 start_on_boot: true    # Set to True to enable starting on boot which adds a windows registry entry
 notification_time: 5  # How long notifications will stay on the screen
 check_power_every: 10  # Seconds in between checks to get the battery/ac status
-default_gaming_plan: null   # Example: "Turbo"
-default_gaming_plan_games: null   # Example list: ["7zFM.exe", "notepad++.exe"]
-default_starting_plan: "Windows"
+default_gaming_plan: null   # Example: "Extreme"
+default_gaming_plan_games: ["Taskmgr.exe"]   # Example list: ["7zFM.exe", "notepad++.exe"]
+default_starting_plan: "Silent (low-speed fan)"
 default_ac_plan: "Silent (low-speed fan)"
 default_dc_plan: "Silent (battery)"
 default_power_plan: "Balanced"
