--- a/data/config.yml
+++ b/data/config.yml
@@ -11,7 +11,7 @@ default_dc_plan: "Silent (battery)"
 default_power_plan: "Balanced"
 alt_power_plan: "temp power plan"
 temp_dir: 'C:\temp\' # MUST END with "\"!!
-use_animatrix: false
+use_animatrix: true
 debug: false # true/false Don't change unless you know what you are doing!!!
 plans:
   - name: Silent (battery)
@@ -32,8 +32,8 @@ plans:
     screen_hz: 120
   - name: Silent (low-speed fan)
     plan: silent
-    cpu_curve: "30c:0%,40c:0%,50c:10%,60c:10%,70c:31%,80c:49%,90c:56%,100c:56%"
-    gpu_curve: "30c:0%,40c:0%,50c:10%,60c:10%,70c:34%,80c:51%,90c:61%,100c:61%"
+    cpu_curve: "30c:0%,40c:5%,50c:10%,60c:10%,70c:31%,80c:49%,90c:56%,100c:56%"
+    gpu_curve: "30c:0%,40c:5%,50c:10%,60c:10%,70c:34%,80c:51%,90c:61%,100c:61%"
     cpu_tdp: 35000
     boost: 0
     dgpu_enabled: true
