notifications and rog key

--- a/data/config.yml
+++ b/data/config.yml
@@ -1,7 +1,8 @@
 #boost modes: 0 = disabled, 2 = aggressive, 4 = efficient aggressive
 app_name: "G14 Control r2"  # Name of the app, you can customize that as you wish!
 start_on_boot: true    # Set to True to enable starting on boot which adds a windows registry entry
-notification_time: 5  # How long notifications will stay on the screen
+notification_time: 2  # How long notifications will stay on the screen
+long_notification_time: 5
 check_power_every: 10  # Seconds in between checks to get the battery/ac status
 default_gaming_plan: null   # Example: "Extreme"
 default_gaming_plan_games: ["Taskmgr.exe"]   # Example list: ["7zFM.exe", "notepad++.exe"]
@@ -11,6 +12,7 @@ default_dc_plan: "Silent (battery)"
 default_power_plan: "Balanced"
 alt_power_plan: "temp power plan"
 temp_dir: 'C:\temp\' # MUST END with "\"!!
+rog_key: "C:\\Windows\\System32\\Taskmgr.exe"
 debug: false # true/false Don't change unless you know what you are doing!!!
 plans:
   - name: Silent (battery)
